--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,8 +74,7 @@ input,button,textarea,select {
 
 .card{
     display: grid;
-    // grid-template-rows: repeat(4,1fr);
-    grid-auto-rows: minmax(5rem, max-content);
+    grid-template-rows: .5fr .5fr .5fr 1fr;
 
     color: $neutral-transparent-white;
     min-width: 28rem;
@@ -103,19 +102,56 @@ input,button,textarea,select {
         border-bottom-right-radius: 1rem;
     }
 
-    
-    .btn{
-        color: black; /* Schriftfarbe Button */
-        background-color: var(--text-color-light); /* Hintergrundfarbe des Buttons */
-        font-size: 15px; /* Schrift Größe im Button */
-        text-decoration: none; /* das "none" gegebenenfalls ersetzen, falls gewünscht */
-        border-radius: 50px; /* falls gewünscht wird hier die Border festgelegt */
-        padding: 10px 30px 10px 30px; /* Größe des Buttons festlegen */
-        transition: 0.3s ease; /* <-- nur ein Beispiel | das ist Übergang bei zum Beispiel dem Hover Effect */
-        text-align: center; /* Text mittig im Button platzieren */
-        position: absolute;
-        bottom: 0; 
+    .flex{
+        display: flex;
+        flex-direction: column-reverse;
+        width: 14rem;
+
+        .btn{
+            background-color: $neutral-transparent-white;
+            border-radius: 5rem; 
+            font-size: 1.5rem;
+            height: 3em;
+            padding: 1rem 3rem 1rem 3rem; 
+            text-decoration: none;
+            transition: 0.3s ease; 
+            text-align: center;
+
+            &__sedans{
+                
+                color: $primary-bright-orange;
+
+                &:hover{
+                    background-color: $primary-bright-orange;
+                    border: 2px solid $neutral-transparent-white;
+                    color: $neutral-transparent-white;
+                }
+            }
+            &__suvs{
+
+                color: $primary-dark-cyan;
+
+                &:hover{
+                    background-color: $primary-dark-cyan;
+                    border: 2px solid $neutral-transparent-white;
+                    color: $neutral-transparent-white;
+                }
+            }
+            &__luxury{
+
+                color: $primary-very-dark-cyan;
+
+                &:hover{
+                    background-color: $primary-very-dark-cyan;
+                    border: 2px solid $neutral-transparent-white;
+                    color: $neutral-transparent-white;
+                }
+            }
+
+        }
+
     }
+
 }
 
 
